--- a/css/style.css
+++ b/css/style.css
@@ -144,26 +144,21 @@ ul {
   padding: 10px;
   width: 200px;
   display: none;
+  border-radius: 50%;
+}
+
+.projectpic {
+  padding: 10px;
+  height: 200px;
 }
 
 img {
   padding: 10px;
 }
 
-/* Bar chart stuff */
-.chart div {
-  font: 10px sans-serif;
-  background-color: #4A4A4A;
-  text-align: right;
-  padding: 3px;
-  margin: 1px;
-  height: 12px;
-  color: white;
-  display: inline-block;
-}
-
 span {
   padding: 5px;
+  color: white;
 }
 
 #letsConnect {
